# acord

./: .dockerignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  main.cpp
.docker/: config.json
.github/workflows/: build.yml
client/code/: CMakeLists.txt
client/code/acord/client/: Connection.cpp  Connection.hpp  IoCtx.cpp  IoCtx.hpp  Logging.cpp  Logging.hpp  WsSession.cpp  WsSession.hpp  api.h
cmake/: acord_dep.cmake
cmake/ac-deps/: boost.cmake  fishnets.cmake
common/: CMakeLists.txt
common/code/: CMakeLists.txt
common/code/acord/: CommonWsSession.cpp  CommonWsSession.hpp  DefaultPort.hpp  Frame.hpp  FrameCvt.hpp  WsSessionHandlerWobj.hpp  api.h
common/code/acord/schema/: Acord.hpp
common/test/: CMakeLists.txt  t-Frame.cpp  t-FrameCvt.cpp
example/: CMakeLists.txt  FooSchema.hpp  README.md  e-hello-foo.cpp  echo-test.html  manual-frame-test.html
example/cpp/: CMakeLists.txt  README.md  e-cli-assist.cpp  e-hello-foo.cpp
example/html/: README.md  chat.html  chat.js  index.html  llama-chat.html  llama-chat.js  manual-frame-test.html  manual-frame-test.js  stable-diffusion.html  stable-diffusion.js  styles.css
example/llama-html/: README.md  index.html
example/python/: README.md  requirements.txt  stable-diffusion-gradio.py
example/stable-diffusion-html/: index.html
server/: AppCtx.hpp  CMakeLists.txt  LocalSession.cpp  WsSession.cpp  WsSession.hpp  main.cpp
server/acord/: CMakeLists.txt  LocalSession.cpp  LocalSession.hpp  WsSession.cpp  WsSession.hpp  main.cpp
server/ahttp/: CMakeLists.txt
server/asset-mgr/: CMakeLists.txt
server/asset-mgr/code/: CMakeLists.txt
server/asset-mgr/code/acord/asset/: FsUtil.cpp  FsUtil.hpp  Logging.cpp  Logging.hpp  Manager.cpp  Manager.hpp  api.h
server/asset-mgr/test/: CMakeLists.txt  t-FsUtil.cpp  t-Manager.cpp
server/code/: CMakeLists.txt
server/code/acord/server/: App.cpp  App.hpp  AppCtx.hpp  AppRunner.hpp  AssetMgr.cpp  AssetMgr.hpp  AssetMgrInterface.hpp  AssetMgrService.cpp  AssetMgrService.hpp  DefaultPort.hpp  FsUtil.cpp  FsUtil.hpp  LocalSession.cpp  LocalSession.hpp  Logging.cpp  Logging.hpp  WsSession.cpp  WsSession.hpp  api.h
server/test/: CMakeLists.txt  t-AssetMgr.cpp  t-FsUtil.cpp
